[gd_scene load_steps=13 format=3 uid="uid://4q37bebmn1r7"]

[ext_resource type="Script" path="res://Map/Valhalla/HouseScene/HouseIceMap/house_ice_scene.gd" id="1_xxr6f"]
[ext_resource type="Texture2D" uid="uid://beqh180a75c43" path="res://Map/Ice Realm/ice_background.png" id="2_8slkd"]
[ext_resource type="PackedScene" uid="uid://dkkg5637pmppv" path="res://Map/Valhalla/HouseScene/HouseSkeleton.tscn" id="4_7f6ix"]
[ext_resource type="PackedScene" uid="uid://xgnk7otp48b0" path="res://Map/Valhalla/HouseScene/housePlayer.tscn" id="5_hqn87"]
[ext_resource type="PackedScene" uid="uid://cxwfgk0ngga1o" path="res://Map/Valhalla/HouseScene/HouseIceMap/HouseIceBlock.tscn" id="6_4q1en"]
[ext_resource type="PackedScene" uid="uid://d4dlhae3poeln" path="res://Map/Valhalla/HouseScene/HouseChest.tscn" id="6_m41nt"]
[ext_resource type="PackedScene" uid="uid://6hlelxp6g82n" path="res://Map/Valhalla/HouseScene/HouseIceMap/HouseIceBossGate.tscn" id="7_srmcc"]

[sub_resource type="BoxShape3D" id="BoxShape3D_aq1w3"]
size = Vector3(26, 1, 27)

[sub_resource type="PlaneMesh" id="PlaneMesh_i2uqq"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_5w1q7"]

[sub_resource type="Sky" id="Sky_kadu1"]
sky_material = SubResource("ProceduralSkyMaterial_5w1q7")

[sub_resource type="Environment" id="Environment_ryuva"]
background_mode = 2
sky = SubResource("Sky_kadu1")

[node name="HouseScene" type="Node3D"]
script = ExtResource("1_xxr6f")

[node name="Area3D" type="StaticBody3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)

[node name="Sprite3D2" type="Sprite3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
texture = ExtResource("2_8slkd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -0.5, 0, 0)
shape = SubResource("BoxShape3D_aq1w3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, -1, 0)
mesh = SubResource("PlaneMesh_i2uqq")

[node name="Area3D2" type="StaticBody3D" parent="."]
transform = Transform3D(-1.31134e-07, -3, 0, 3, -1.31134e-07, 0, 0, 0, 3, 41, 13, 0)

[node name="Sprite3D2" type="Sprite3D" parent="Area3D2"]
transform = Transform3D(1.19249e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, -1.19249e-08, -5.21253e-16, 12.6667, -0.666668, 0)
texture = ExtResource("2_8slkd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)
shape = SubResource("BoxShape3D_aq1w3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D2"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, -1, 0)
mesh = SubResource("PlaneMesh_i2uqq")

[node name="Area3D3" type="StaticBody3D" parent="."]
transform = Transform3D(-1.31134e-07, -3, 0, 3, -1.31134e-07, 0, 0, 0, 3, 41, 13, 0)

[node name="Sprite3D2" type="Sprite3D" parent="Area3D3"]
transform = Transform3D(1.19249e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, -1.19249e-08, -5.21253e-16, 10.6667, 28.3333, 2.33333)
texture = ExtResource("2_8slkd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)
shape = SubResource("BoxShape3D_aq1w3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D3"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, -1, 0)
mesh = SubResource("PlaneMesh_i2uqq")

[node name="Area3D4" type="StaticBody3D" parent="."]
transform = Transform3D(5.73206e-15, 1.31134e-07, -3, 3, -1.31134e-07, 0, -1.31134e-07, -3, -1.31134e-07, 0, 20, 130)

[node name="Sprite3D2" type="Sprite3D" parent="Area3D4"]
transform = Transform3D(3.91356e-08, -0.258819, 0.965926, -6.65433e-08, -0.965926, -0.258819, 1, -5.41468e-08, -5.50247e-08, 29.3334, 46, 3)
texture = ExtResource("2_8slkd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)
shape = SubResource("BoxShape3D_aq1w3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D4"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, -1, 0)
mesh = SubResource("PlaneMesh_i2uqq")

[node name="Area3D5" type="StaticBody3D" parent="."]
transform = Transform3D(5.73206e-15, 1.31134e-07, -3, 3, -1.31134e-07, 0, -1.31134e-07, -3, -1.31134e-07, 0, 20, 130)

[node name="Sprite3D2" type="Sprite3D" parent="Area3D5"]
transform = Transform3D(1.19249e-08, 1, 4.37114e-08, 3.55271e-15, -4.37114e-08, 1, 1, -1.19249e-08, -3.55271e-15, 9.66667, 29, -0.333333)
texture = ExtResource("2_8slkd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D5"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)
shape = SubResource("BoxShape3D_aq1w3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D5"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, -1, 0)
mesh = SubResource("PlaneMesh_i2uqq")

[node name="Area3D6" type="StaticBody3D" parent="."]
transform = Transform3D(5.73206e-15, 1.31134e-07, -3, 3, -1.31134e-07, 0, -1.31134e-07, -3, -1.31134e-07, 2, 23, 42)

[node name="Sprite3D2" type="Sprite3D" parent="Area3D6"]
transform = Transform3D(1.19249e-08, 1, 4.37114e-08, 0, -4.37114e-08, 1, 1, -1.19249e-08, 0, 9.66667, 27.6667, 1.33333)
texture = ExtResource("2_8slkd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0)
shape = SubResource("BoxShape3D_aq1w3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Area3D6"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, -1, 0)
mesh = SubResource("PlaneMesh_i2uqq")

[node name="Draugr3D" parent="." instance=ExtResource("4_7f6ix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29, 6, 12)

[node name="Draugr3D2" parent="." instance=ExtResource("4_7f6ix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19, 7, 12)

[node name="Draugr3D3" parent="." instance=ExtResource("4_7f6ix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 6, 23)

[node name="Draugr3D4" parent="." instance=ExtResource("4_7f6ix")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 6, -31)

[node name="HousePlayer" parent="." instance=ExtResource("5_hqn87")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)

[node name="HouseChest" parent="." instance=ExtResource("6_m41nt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -34, 1, 0)

[node name="HouseChest2" parent="." instance=ExtResource("6_m41nt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1, -25)

[node name="HouseChest3" parent="." instance=ExtResource("6_m41nt")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 29)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ryuva")

[node name="HouseTree" parent="." instance=ExtResource("6_4q1en")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25, 0, 0)

[node name="HouseTree2" parent="." instance=ExtResource("6_4q1en")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 23)

[node name="HouseTree3" parent="." instance=ExtResource("6_4q1en")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -39, 0, -16)

[node name="HouseBossGate" parent="." instance=ExtResource("7_srmcc")]
transform = Transform3D(7, 0, 0, 0, 7, 0, 0, 0, 7, 0, 5, -40)

[connection signal="HouseKey" from="HouseChest" to="." method="_on_house_chest_house_key"]
[connection signal="HouseKey" from="HouseChest2" to="." method="_on_house_chest_2_house_key"]
[connection signal="HouseKey" from="HouseChest3" to="." method="_on_house_chest_3_house_key"]
[connection signal="EnterBossGate" from="HouseBossGate" to="." method="_on_house_boss_gate_enter_boss_gate"]
